# ai-dial-analytics-realtime

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .ort.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  analytics.py  app.py  download_model.py  noxfile.py  pyproject.toml  requirements.txt  topic_model.py  universal_api_utils.py
.github/: CODEOWNERS
.github/workflows/: deploy_dev.yml  pr.yml  pr_check_tests.yml  release.yml
ai_dial_analytics_realtime/: analytics.py  app.py
aidial_analytics_realtime/: analytics.py  app.py  influx_writer.py  rates.py  time.py  topic_model.py  universal_api_utils.py
dashboards/: README.md  dial_analytics.json  dial_analytics_raw_data.json
dial_analytics/: analytics.py  app.py  rates.py  topic_model.py
helm/: development.yaml  review.yaml
tests/: influx_writer_mock.py  test_app.py  test_huggingface_model.py  test_local_model.py  test_rates.py  test_time.py
topic_model/: config.json  topic_embeddings.safetensors  topics.json
