[tool.poetry]
name = "dial-analytics"
version = "0.1.0"
description = ""
authors = ["Aliaksei_Labanau <aliaksei_labanau@epam.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.5"
fastapi = "0.97.0"
uvicorn = "0.22.0"
influxdb-client = "1.37.0"
langid = "1.1.6"
python-dateutil = "2.8.2"
torch = {version = "^2.0.1+cpu", source = "pytorch"}
bertopic = "^0.15.0"
llvmlite = "^0.40.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
autoflake = "^2.2.1"
pyright = "^1.1.325"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
